<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textShortDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/textView2"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="46dp" />

        <TextView
            android:id="@+id/textDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/textView3"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textShortDes"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="116dp" />

        <TextView
            android:id="@+id/textVideoURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/textView4"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDes"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="192dp" />

        <ImageView
            android:id="@+id/imageThumbnail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/cardview_dark_background"
            android:contentDescription="@string/ImageView"
            android:padding="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textVideoURL"
            app:srcCompat="@drawable/mr_button_dark"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="277dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>